2008-06-11  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_MOUNT_REGISTRY): Bump.
	(CYGWIN_INFO_CYGWIN_MOUNT_REGISTRY_NAME): Remove.
	(CYGWIN_INFO_CYGDRIVE_FLAGS): Remove.
	(CYGWIN_INFO_CYGDRIVE_PREFIX): Remove.
	(CYGWIN_INFO_CYGDRIVE_DEFAULT_PREFIX): Add comment to differ from the
	registry related defines.

2008-06-11  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_procnet.cc (dad_to_flags): Fix comment.

2008-06-10  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_procnet.cc (get_scope): New static function to evaluate
	scope.
	(dad_to_flags): New static array to convert Windows DAD state to
	Linux values.
	(format_procnet_ifinet6): Drop asking for IfIndex, just use Ipv6IfIndex.
	Use get_scope and dad_to_flags to generate more accurate linux-like
	output.

2008-06-10  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (if_nametoindex): Fix typo in call to get_adapters_addresses.
	(if_indextoname): Prefer IPv6 loopback device name over IPv4 loopback
	device name on pre-Vista systems.
	(if_nameindex): Ditto.

2008-06-10  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_procnet.cc (format_procnet_ifinet6): Use sprintf rather than
	__small_sprintf.
	* net.cc (if_nametoindex): Prefer IPv6IfIndex over IfIndex for
	consistency with /proc/net/if_inet6.
	(if_indextoname): Ditto.
	(if_nameindex): Ditto.

2008-06-10  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (mount_info::from_fstab): Read sizeof (buf) - 2 bytes.
	Add code to handle overly long lines.

2008-06-10  Corinna Vinschen  <corinna@vinschen.de>

	* sec_auth.cc (lsaauth): Make returned token inheritable.

2008-06-10  Corinna Vinschen  <corinna@vinschen.de>

	* devices.cc: Regenerate.

2008-06-09  Christopher Faylor  <me+cygwin@cgf.cx>

	* devices.in: Remove "Global" from tty device.

008-06-09  Eric Blake  <ebb9@byu.net>

	* signal.cc (abort): Only flush streams after signal handler.

2008-06-02  Christopher Faylor  <me+cygwin@cgf.cx>
